2002-07-23  Harald Harders  <h.harders@tu-bs.de>

	* NEWS docs/gnuplot.doc src/gadgets.h src/graph3d.c src/graphics.c
	src/graphics.h src/set.c src/show.c src/term.c src/term_api.h:
	New option 'set arrow ... filled | nofilled' for filled arrow heads.

2002-07-23  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c docs/gnuplot.doc: Allow filled boxes in candlestick
	plots, under control of the "set style fill ..." command. 

2002-07-22  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.c: Fix misplaced call to reset_textcolor().

	* src/plot3d.h src/plot3d.c src/graph3d.c: Do not call
	term->previous_palette() if !plot_has_palette.

2002-07-22  Ethan Merritt  <merritt@u.washington.edu>

	* demo/textcolor.dem demo/all.dem: Demo for text color.

	* src/gadgets.c: Fix for default textcolor.

2002-07-21  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/metapost.trm: Fix wrong indentation in the documentation
	section.

	* config/makefile.cyg config/makefile.mgw: Fix if .. endif clause for
	optional PDF terminal.

	* term/svg.trm: Support for "textcolor ...".

	* term/mif.trm: Documented option "color".

2002-07-21  Ethan Merritt  <merritt@u.washington.edu>

	* NEWS docs/gnuplot.doc src/color.c src/gadgets.c src/gadgets.h
	src/gplt_x11.c src/graph3d.c src/graphics.c src/plot3d.c src/save.c
	src/set.c src/show.c src/term.c src/win/wgraph.c term/cgm.trm
	term/gd.trm term/mif.trm: Implementation of 'textcolor ...' for 
	title, [x|y|z|cb|...]label and labels.

2002-07-20  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS src/show.c docs/gnuplot.doc: New option 'add2history' for
	'show plot'.

	* src/command.c: Separate chained (s)plot + replot command sequence
	as displayed by 'show plot' by ", " instead of ",". 

2002-07-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/ggi.trm: Minor changes in the documentation.

	* term/metapost.trm: Fix `something' => `something` in the
	documentation section.

2002-07-10  Ethan Merritt  <merritt@u.washington.edu>
