@@ -1,3 +1,7 @@
+2002-07-23  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* src/save.c: Save the (no)filled option for arrows.
+
 2002-07-23  Harald Harders  <h.harders@tu-bs.de>
 
 	* NEWS docs/gnuplot.doc src/gadgets.h src/graph3d.c src/graphics.c
@@ -789,7 +793,7 @@
 
 	* docs/titlepag.sty: Changes for the title page of gnuplot.tex: 
 	Show up-to-date gnuplot version (from the file VERSION) and the
-	last modification date (from the tag $Date: 2002/07/23 18:53:11 $).
+	last modification date (from the tag $Date: 2002/07/23 19:00:03 $).
 
 2002-03-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
